# SOM

./: .gitignore  Dockerfile  README.md  cpp_files.txt  go.mod  go.sum  install.ps1  install.sh  package-lock.json  package.json
.github/workflows/: desktop.yml  release-som.yml
app/: .gitignore  App.tsx  app.json  package-lock.json  package.json  tmpclaude-d30d-cwd  tsconfig.json
app/.husky/: pre-commit
app/android-backup/: build_err.txt  build_out.txt
app/android-backup/app/: build.gradle
app/patches/: @react-native-voice+voice+3.2.4.patch  expo+54.0.33.patch  expo-modules-core+3.0.29.patch  react-native-track-player+4.1.2.patch
app/src/components/: MarqueeText.tsx  MiniPlayer.tsx  MusicCard.tsx  NeoShadowWrapper.tsx  SongRow.tsx  SyncedLyrics.tsx
app/src/contexts/: PlayerContext.tsx
app/src/hooks/: useThumbColor.ts
cmd/server/: main.go
cmd/som/: install.go  main.go  update.go
desktop/: index.html  package.json  vite.config.ts
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: downloads.rs  lib.rs  main.rs  sidecar.rs
docs/: DESKTOP.md
internal/backend/: server.go
internal/cleaner/: cleaner.go  cleaner_test.go
internal/handler/: lyrics.go  resolve.go  search.go  stream.go
internal/playlist/: store.go
internal/scraper/: direct_subs.go  lrclib.go  lyrics_fallback.go  scraper.go  vtt_parser.go  vtt_parser_test.go  ytdlp.go
scripts/: build-desktop-sidecar.mjs  install.ps1  install.sh  release.sh
som-tui/: go.mod
(+69 files in other folders)
