[package]
name = "som-desktop"
version = "0.1.0"
description = "SOM desktop app"
authors = ["SOM"]
edition = "2021"

[lib]
name = "som_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

